--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,46 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+.header,
+.footer {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  padding:0;
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  gap: 10px;
+}
+
+
+button {
+  padding: 8px 16px;
+}
+
+.footer {
+  background-color: beige;
 }
 
 img {
